Flag 2: improve robots.txt hints for clearer player guidance

--- a/flag2/index.html
+++ b/flag2/index.html
@@ -110,7 +110,12 @@
             <a href="#" class="btn" onclick="alert('Connection Terminated.')">LOGOUT</a>
         </div>
         <div class="hint-text">
-            "Even web crawlers have boundaries they aren't supposed to cross..."
+            💡 Analyst Note: <em>"Search engines know where they are not welcome. Every site leaves a breadcrumb for
+                crawlers — a standard file that lists what's hidden. Perhaps you should check what this server is hiding
+                from bots..."</em>
+        </div>
+        <div class="hint-text" style="margin-top:12px; color: #3a4a5a; font-size: 0.72rem;">
+            [ Try changing the URL path. What file do web crawlers always look for? ]
         </div>
     </div>
 
