Flag 5: update analyst note hint

--- a/flag5/index.html
+++ b/flag5/index.html
@@ -192,7 +192,8 @@
                 <span class="hint-label">💡 Analyst Note</span>
                 <span class="hint-text">Every photo taken with a camera stores invisible information alongside the
                     pixels. Photographers, journalists and OSINT analysts read this hidden data all the time. Try
-                    inspecting what's <em>attached</em> to the file itself — not just what you can see.</span>
+                    inspecting what's <em>attached</em> to the file itself — not just what you can see. A small shift in
+                    representation can reveal what was hidden.</span>
             </div>
             <div class="tags">
                 <span class="tag">exiftool</span>
