--- a/flag6/index.html
+++ b/flag6/index.html
@@ -172,25 +172,35 @@
         <div class="card">
             <div class="eyebrow">// OSINT — Digital Footprint</div>
             <div class="title">🕵️ Trace the Ghost</div>
-            <p class="subtitle">We know someone goes by this username online. They left something public — you just have
-                to find the right platform.</p>
+            <p class="subtitle">An operative was traced across several platforms. We intercepted fragments of their
+                digital identity — but the file is partially redacted. Piece it together.</p>
 
-            <div class="target-label">// Target Username</div>
-            <div class="username-box">artimas_ctf_player</div>
-
-            <div class="platforms">
-                <span class="platform">GitHub</span>
-                <span class="platform">Pastebin</span>
-                <span class="platform">Gist</span>
-                <span class="platform">Twitter / X</span>
-                <span class="platform">Reddit</span>
+            <div class="target-label">// Intercepted Intel Report</div>
+            <div
+                style="background:rgba(0,255,136,0.04);border:1px solid rgba(0,255,136,0.18);border-radius:10px;padding:20px 24px;text-align:left;margin-bottom:26px;">
+                <div
+                    style="font-family:'Share Tech Mono',monospace;font-size:0.72rem;letter-spacing:2px;color:#334155;margin-bottom:14px;">
+                    CLASSIFICATION: RESTRICTED — PARTIAL REDACTION APPLIED</div>
+                <div style="font-family:'Share Tech Mono',monospace;font-size:0.82rem;line-height:2;color:#94a3b8;">
+                    <span style="color:rgba(0,255,136,0.5);">FIELD_01</span> &nbsp;Forum alias &nbsp;&nbsp;&nbsp;&nbsp;:
+                    <span style="color:#00ff88;">artimas</span><br>
+                    <span style="color:rgba(0,255,136,0.5);">FIELD_02</span> &nbsp;Activity tag &nbsp;&nbsp;&nbsp;:
+                    <span style="color:#00ff88;">ctf_player</span><br>
+                    <span style="color:rgba(0,255,136,0.5);">FIELD_03</span> &nbsp;Full handle &nbsp;&nbsp;&nbsp;&nbsp;:
+                    <span
+                        style="color:#334155;background:#1a1a1a;border-radius:3px;padding:0 10px;">████████████████████</span><br>
+                    <span style="color:rgba(0,255,136,0.5);">FIELD_04</span> &nbsp;Platform
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: <span style="color:#334155;">██████ Gist</span><br>
+                    <span style="color:rgba(0,255,136,0.5);">FIELD_05</span> &nbsp;Last activity &nbsp;: <span
+                        style="color:#334155;">████-██-██</span>
+                </div>
             </div>
 
             <div class="hint-block">
                 <span class="hint-label">💡 Analyst Note</span>
-                <span class="hint-text">OSINT investigators always check where a username appears across platforms. This
-                    person published something publicly. Try searching their username in the internal database
-                    below.</span>
+                <span class="hint-text">OSINT operatives reconstruct full identities from fragments. The complete handle
+                    can be assembled from the fields above. Once you have it, use the search terminal below
+                    to locate their public presence.</span>
             </div>
 
             <!-- Simulated Search for Offline Play -->
