Fix flag3 encoding (Hex+Base64), remove flag6 green highlight

--- a/flag6/mock_profile.html
+++ b/flag6/mock_profile.html
@@ -108,8 +108,7 @@
         }
 
         .flag-line {
-            color: #34d399;
-            font-weight: 700;
+            color: #c9d1d9;
         }
 
         .gist-meta {
