Harder flag5 (hex EXIF) + flag8 (leetspeak password s3cur3_v4ult)

--- a/flag5/index.html
+++ b/flag5/index.html
@@ -191,9 +191,10 @@
             <a class="btn" href="challenge.jpg" download="challenge.jpg">📥 Download Image File</a>
             <div class="hint-block">
                 <span class="hint-label">💡 Analyst Note</span>
-                <span class="hint-text">Digital images carry layers of invisible information. Not every field
-                    is obvious — and not everything you find first is the answer. Some data is encoded
-                    before being stored. Look carefully at every field, and decode what seems out of place.
+                <span class="hint-text">Digital images carry layers of invisible information across many fields.
+                    Not every field is obvious — and not everything you find first is the answer.
+                    Some data isn't encoded in the way you'd expect. Think beyond the usual suspects:
+                    not all encoding schemes use letters. Sometimes, the alphabet is just 0–9 and a–f.
                 </span>
             </div>
             <div class="tags">
