--- a/flag8/index.html
+++ b/flag8/index.html
@@ -170,29 +170,19 @@
             <a class="btn" href="challenge.zip" download="challenge.zip">📦 Download challenge.zip</a>
             <div class="hint-block">
                 <span class="hint-label">💡 Analyst Note</span>
-                <span class="hint-text">In these trials of borrowed locks,
-                    the keys are rarely forged with care.
-                    They are short, forgetful things—
-                    names half-remembered, years clumsily appended,
-                    habits masquerading as secrets.
+                <span class="hint-text">The architect of this vault was paranoid but predictable.
+                    They named their password after what they were protecting — a <b>secure vault</b> —
+                    but dressed it in the language of the streets: letters swapped for
+                    numbers, vowels traded for digits, underscores where spaces should be.
 
-                    Think like the hurried hand that set the password:
-                    a familiar word, an event, a date meant to be obvious
-                    only to the one who chose it.
-                    Let the machines chant the guesses for you,
-                    patient, tireless, unoffended by repetition.
-
-                    And when the lock finally yields,
-                    it will not be brilliance that opened it,
-                    but the quiet understanding
-                    that most secrets fail
-                    because their makers do.</span>
+                    The old-school call it leetspeak.
+                    The password is hiding in plain sight, if you read between the substitutions.</span>
             </div>
             <div class="tags">
                 <span class="tag">fcrackzip</span>
                 <span class="tag">john + zip2john</span>
                 <span class="tag">7-Zip</span>
-                <span class="tag">hashcat</span>
+                <span class="tag">leetspeak</span>
             </div>
         </div>
     </div>
