Flag 6 harder: encoded fragments, hidden flag in HTML source

--- a/flag6/index.html
+++ b/flag6/index.html
@@ -183,9 +183,9 @@
                     CLASSIFICATION: RESTRICTED — PARTIAL REDACTION APPLIED</div>
                 <div style="font-family:'Share Tech Mono',monospace;font-size:0.82rem;line-height:2;color:#94a3b8;">
                     <span style="color:rgba(0,255,136,0.5);">FIELD_01</span> &nbsp;Forum alias &nbsp;&nbsp;&nbsp;&nbsp;:
-                    <span style="color:#00ff88;">artimas</span><br>
+                    <span style="color:#00ff88;">YXJ0aW1hcw==</span><br>
                     <span style="color:rgba(0,255,136,0.5);">FIELD_02</span> &nbsp;Activity tag &nbsp;&nbsp;&nbsp;:
-                    <span style="color:#00ff88;">ctf_player</span><br>
+                    <span style="color:#00ff88;">reyalp_ftc</span><br>
                     <span style="color:rgba(0,255,136,0.5);">FIELD_03</span> &nbsp;Full handle &nbsp;&nbsp;&nbsp;&nbsp;:
                     <span
                         style="color:#334155;background:#1a1a1a;border-radius:3px;padding:0 10px;">████████████████████</span><br>
@@ -198,9 +198,11 @@
 
             <div class="hint-block">
                 <span class="hint-label">💡 Analyst Note</span>
-                <span class="hint-text">OSINT operatives reconstruct full identities from fragments. The complete handle
-                    can be assembled from the fields above. Once you have it, use the search terminal below
-                    to locate their public presence.</span>
+                <span class="hint-text">The intel fragments have been obfuscated by the source — one is encoded,
+                    another is reversed. Decode each fragment, then combine them with the correct separator
+                    to reconstruct the full handle. Once assembled, use the search terminal below
+                    to locate their public presence. The flag isn't always on the surface —
+                    sometimes you need to look at the source.</span>
             </div>
 
             <!-- Simulated Search for Offline Play -->
