--- a/flag6/mock_profile.html
+++ b/flag6/mock_profile.html
@@ -146,15 +146,32 @@
 
                 --- Notes ---
                 If you found this, you're on the right track. Keep digging.
+                There's more here than meets the eye. Real investigators check the source.
 
-                <span class="flag-line">Flag: ARTIMAS{0s1nt_pr0f1l3_tr4c3d}</span>
+                Good luck 🚩
+            </div>
+            <div class="gist-meta">Posted on GitHub Gist · Public · 1 file</div>
+        </div>
 
-                Good job tracing my profile. Now go find the next one 🚩
+        <div class="gist-card">
+            <div class="gist-title">📄 ctf_notes.md</div>
+            <div class="gist-desc">Some CTF resources and writeup links.</div>
+            <div class="gist-content">## Useful Resources
+                - CyberChef: https://gchq.github.io/CyberChef
+                - Sherlock: https://github.com/sherlock-project
+                - GTFOBins: https://gtfobins.github.io
+
+                Remember: OSINT is about patience. The answer is always
+                in the details people forget to hide.
             </div>
             <div class="gist-meta">Posted on GitHub Gist · Public · 1 file</div>
         </div>
 
     </div>
+
+    <!-- You found the source. Nice work, operative. Here's your reward: -->
+    <!-- Flag: ARTIMAS{0s1nt_pr0f1l3_tr4c3d} -->
+
 </body>
 
 </html>
